--- a/app/src/main/res/layout-land-1280x720/activity_game_settings.xml
+++ b/app/src/main/res/layout-land-1280x720/activity_game_settings.xml
@@ -6,9 +6,9 @@
     tools:context="com.jinwei.tvgame2048.ui.GameSettingsActivity">
     <LinearLayout
         android:orientation="vertical"
-        android:background="@drawable/bg_round_rectangle_stroke"
+        android:background="@drawable/bg_round_rectangle_stroke_720p"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="110dp"
+        android:layout_marginRight="170dp"
         android:layout_centerVertical="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -16,29 +16,29 @@
             style="@style/settings_linearlayout_item_style"
             android:background="@drawable/bg_selector_focus_edge_top"
             android:orientation="horizontal"
-            android:layout_marginTop="9dp"
+            android:layout_marginTop="@dimen/width_stroke_720p"
             android:id="@+id/game_settings_sound"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                style="@style/settings_image_item_style"
+                style="@style/settings_image_item_style_720p"
                 android:id="@+id/imageview_sound"
                 android:src="@mipmap/game_sound_off_unforcus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                style="@style/settings_text_item_style"
+                style="@style/settings_text_item_style_720p"
                 android:id="@+id/textview_sound"
                 android:text="@string/game_setting_sound"
-                android:layout_width="90dp"
-                android:layout_height="wrap_content" />
+                android:layout_width="120dp"
+                android:layout_height="60dp" />
         </LinearLayout>
         <ImageView
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginStart="@dimen/width_stroke_720p"
+            android:layout_marginEnd="@dimen/width_stroke_720p"
             android:background="@color/gray_stoke"
             android:layout_width="match_parent"
-            android:layout_height="10dp" />
+            android:layout_height="@dimen/width_stroke_720p" />
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             style="@style/settings_linearlayout_item_style"
             android:background="@drawable/bg_selector_focus"
@@ -47,25 +47,25 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <ImageView
-                style="@style/settings_image_item_style"
+                style="@style/settings_image_item_style_720p"
                 android:id="@+id/imageview_back"
                 android:src="@mipmap/game_back_unforcus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                style="@style/settings_text_item_style"
+                style="@style/settings_text_item_style_720p"
                 android:id="@+id/textview_back"
                 android:text="@string/game_setting_go_back"
-                android:layout_width="90dp"
-                android:layout_height="wrap_content" />
+                android:layout_width="120dp"
+                android:layout_height="60dp" />
         </LinearLayout>
         <ImageView
             android:id="@+id/image_view_after_back"
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginStart="@dimen/width_stroke_720p"
+            android:layout_marginEnd="@dimen/width_stroke_720p"
             android:background="@color/gray_stoke"
             android:layout_width="match_parent"
-            android:layout_height="12dp" />
+            android:layout_height="@dimen/width_stroke_720p" />
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             style="@style/settings_linearlayout_item_style"
             android:background="@drawable/bg_selector_focus"
@@ -73,24 +73,24 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <ImageView
-                style="@style/settings_image_item_style"
+                style="@style/settings_image_item_style_720p"
                 android:id="@+id/imageview_home"
                 android:src="@mipmap/game_home_unfocus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                style="@style/settings_text_item_style"
+                style="@style/settings_text_item_style_720p"
                 android:id="@+id/textview_home"
                 android:text="@string/game_setting_go_home"
-                android:layout_width="90dp"
-                android:layout_height="wrap_content" />
+                android:layout_width="120dp"
+                android:layout_height="60dp" />
         </LinearLayout>
         <ImageView
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginStart="@dimen/width_stroke_720p"
+            android:layout_marginEnd="@dimen/width_stroke_720p"
             android:background="@color/gray_stoke"
             android:layout_width="match_parent"
-            android:layout_height="12dp" />
+            android:layout_height="@dimen/width_stroke_720p" />
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             style="@style/settings_linearlayout_item_style"
             android:background="@drawable/bg_selector_focus"
@@ -98,43 +98,43 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <ImageView
-                style="@style/settings_image_item_style"
+                style="@style/settings_image_item_style_720p"
                 android:id="@+id/imageview_restart"
                 android:src="@mipmap/game_restart_unforcus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                style="@style/settings_text_item_style"
+                style="@style/settings_text_item_style_720p"
                 android:id="@+id/textview_restart"
                 android:text="@string/game_setting_restart"
-                android:layout_width="90dp"
-                android:layout_height="wrap_content" />
+                android:layout_width="120dp"
+                android:layout_height="60dp" />
         </LinearLayout>
         <ImageView
-            android:layout_marginStart="12dp"
-            android:layout_marginEnd="12dp"
+            android:layout_marginStart="@dimen/width_stroke_720p"
+            android:layout_marginEnd="@dimen/width_stroke_720p"
             android:background="@color/gray_stoke"
             android:layout_width="match_parent"
-            android:layout_height="12dp" />
+            android:layout_height="@dimen/width_stroke_720p" />
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             style="@style/settings_linearlayout_item_style"
             android:background="@drawable/bg_selector_forcus_edge_bottom"
             android:id="@+id/game_settings_share"
-            android:layout_marginBottom="9dp"
+            android:layout_marginBottom="@dimen/width_stroke_720p"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
             <ImageView
-                style="@style/settings_image_item_style"
+                style="@style/settings_image_item_style_720p"
                 android:id="@+id/imageview_share"
                 android:src="@mipmap/game_share_unforcus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                style="@style/settings_text_item_style"
+                style="@style/settings_text_item_style_720p"
                 android:id="@+id/textview_share"
                 android:text="@string/game_share"
-                android:layout_width="90dp"
-                android:layout_height="wrap_content" />
+                android:layout_width="120dp"
+                android:layout_height="60dp" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
